# MandelbRust

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
docs/: Features_to_add.md  MSZP-Technical-Report.md  build-and-release.md  deep-zoom-analysis.md  optimization-report.md  overview.md  release-notes-template.md  release-notes-v0.1.0-alpha.md  roadmap-v2.md  roadmap.md
docs/roadmap/: phase-11.md  phase-12.md  phase-13.md  phase-14.md  phase-15.md  phase-16.md  roadmap-completed.md  roadmap.md
mandelbrust-app/: Cargo.toml  build.rs
mandelbrust-app/src/: app.rs  app_dir.rs  app_state.rs  bookmarks.rs  color_profiles.rs  display_color.rs  input.rs  io_worker.rs  j_preview.rs  main.rs  navigation.rs  palette_io.rs  preferences.rs  render_bridge.rs
mandelbrust-app/src/ui/: bookmark_browser.rs  bookmarks.rs  color_picker.rs  export.rs  help.rs  hud.rs  julia_explorer.rs  main_menu.rs  menu_bar.rs  minimap.rs  mod.rs  palette_editor.rs  settings.rs  toolbar.rs
mandelbrust-core/: Cargo.toml
mandelbrust-core/src/: complex.rs  complex_dd.rs  double_double.rs  error.rs  fractal.rs  julia.rs  julia_dd.rs  lib.rs  mandelbrot.rs  mandelbrot_dd.rs  palette_data.rs  viewport.rs
mandelbrust-core/tests/: headless_render.rs
mandelbrust-render/: Cargo.toml
mandelbrust-render/benches/: render_bench.rs
mandelbrust-render/src/: aa.rs  buffer.rs  error.rs  export.rs  extras_buffer.rs  iteration_buffer.rs  lib.rs  palette.rs  renderer.rs  tile.rs
mandelbrust-render/tests/: integration.rs
scripts/: migrate_bookmarks.py
