[workspace]
members = [
    "mandelbrust-core",
    "mandelbrust-render",
    "mandelbrust-app",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/TonyValworthy/MandelbRust"

[workspace.dependencies]
mandelbrust-core = { path = "mandelbrust-core" }
mandelbrust-render = { path = "mandelbrust-render" }
image = { version = "0.25", default-features = false, features = ["png"] }
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
