[package]
name = "mandelbrust-app"
description = "UI and user interaction for MandelbRust"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "MandelbRust"
path = "src/main.rs"

[dependencies]
mandelbrust-core.workspace = true
mandelbrust-render.workspace = true
directories = "6"
eframe = "0.33"
image.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
base64 = "0.22.1"
egui_material_icons = "0.5"
rfd = "0.17.2"

[build-dependencies]
winres = "0.1"
