[package]
name = "mandelbrust-render"
description = "Tiled renderer, coloring, and multithreading for MandelbRust"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mandelbrust-core.workspace = true
rayon.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "render_bench"
harness = false
